added new generato